--- a/info/docs.texi
+++ b/info/docs.texi
@@ -4,7 +4,7 @@
 
 @include intro-docs.texi
 
-This chapter documents a total of 1155 commands and 148 options.
+This chapter documents a total of 1156 commands and 148 options.
 
 @menu
 * amixer::Set Audio Volume from Emacs.
@@ -7722,7 +7722,7 @@ Default Value: @code{@verb{|((' emacspeak-m-player-using-hrtf) (, previous-buffe
 @defvar {User Option} emacspeak-multi-keys
 Multi key bindings. 
 
-Default Value: @code{@verb{|nil|}}
+Default Value: @code{@verb{|((h emacspeak-m-player-browse-history))|}}
 
 @end defvar
 
@@ -8100,6 +8100,20 @@ Move to beginning.
 Binds key to invoke m-player  on specified directory.
 
 (fn DIRECTORY KEY)
+@end format
+@end deffn
+
+@subsubsection emacspeak-m-player-browse-history
+@deffn {Command} emacspeak-m-player-browse-history   
+@table @kbd
+@item C-' h
+@kindex C-' h
+@end table
+
+@findex emacspeak-m-player-browse-history
+
+@format
+Create a  media history browser from media-history.
 @end format
 @end deffn
 
