--- a/info/docs.texi
+++ b/info/docs.texi
@@ -9455,6 +9455,8 @@ Speak number of uncovered cells.
 MPV ==   Media Player
 Enables seamless playback of Youtube content among others.
 Binds mpv commands on C-e C-; as the  prefix key.
+This leverages Emacs' repeat-mode functionality, so successive mpv
+commands require only one initial ress of C-e C-;.
 
 @node emacspeak-mspools
 @section emacspeak-mspools
