added knuth quote

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -1,7 +1,12 @@
 #    -*- mode: org -*-
-The tools we use have a profound (and devious) influence on our thinking habits, and, therefore, on our thinking abilities.
 
-  --Edsger W. Dijkstra"
+Easy things are often amusing and relaxing, but their value soon
+fades. Greater pleasure, deeper satisfaction, and higher wages are
+associated with genuine accomplishments, with the successful
+fulfillment of a challenging task.
+  – Donald Knuth
+
+  
 
 
 Emacspeak News --History Of User-Visible Changes
