--- a/etc/NEWS
+++ b/etc/NEWS
@@ -42,7 +42,7 @@ alternative to xbacklight.el
 [[https://emacspeak.blogspot.com/2022/06/emacspeak-complete-audio-desktop-under.html][Emacspeak auditory display]] features work under Pulseaudio.
 ** Emacspeak Speciality Browsers 
 
-Interactive browsers for EWW Marks, Media History.
+Interactive browsers for EWW Marks,AMarks,  Media History.
 
 ** Speech-Enable ~journalctl-mode~
 
