--- a/info/docs.texi
+++ b/info/docs.texi
@@ -1294,12 +1294,12 @@ Default Value: @code{@verb{|nil|}}
 @section emacspeak-amark
 
 Structure emacspeak-amark holds a bookmark into an mp3 file
-path: fully qualified pathname  to file being marked
+path:  filename containing  marked
 name: Bookmark tag
 Position: time offset from start
 
-This library will be used from emacspeak-m-player,
-emacspeak-mplayer and friends to set and jump to bookmarks.
+ This library will be used from emacspeak-m-player,
+to set and jump to bookmarks.
 
 @subsection Emacspeak-Amark Commands
 
