--- a/info/docs.texi
+++ b/info/docs.texi
@@ -343,7 +343,7 @@ Default Value: @code{@verb{|default|}}
 @defvar {User Option} amixer-volume-step
 Step-size for volume change.
 
-Default Value: @code{@verb{|5|}}
+Default Value: @code{@verb{|2|}}
 
 @end defvar
 
@@ -9361,10 +9361,10 @@ installations.
 This module speech enables  midge.
 Midge is a MIDI composer/editor tool.
 From the package README file:
-                                        ; Midge, for midi generator, is a text to midi translator.
-                                        ; It creates type 1 (ie multitrack) midi files from text
-                                        ; descriptions of music. It is a single perl script, which
-                                        ; does not require any additional modules.
+Midge, for midi generator, is a text to midi translator.
+It creates type 1 (ie multitrack) midi files from text
+descriptions of music. It is a single perl script, which
+does not require any additional modules.
 The package also provides a convenient emacs mode for
 editing and playing  midge files.
 Midge's homepage is at:
