--- a/info/docs.texi
+++ b/info/docs.texi
@@ -1305,8 +1305,10 @@ path:  filename containing  marked
 name: Bookmark tag
 Position: time offset from start
 
- This library will be used from emacspeak-m-player,
-to set and jump to bookmarks.
+ This library will be used from emacspeak-m-player to set and jump
+to bookmarks. Amarks are stored in a .amarks.el file in the working
+directory.  It also provides a simple AMark Browser to use from a
+directory containing mp3 files where Amarks have been created.
 
 @subsection Emacspeak-Amark Commands
 
@@ -1335,7 +1337,7 @@ given name, it is updated with path and position.
 @findex emacspeak-amark-browse
 
 @format
-Browse  nearest amarks file.
+Browse   amarks  in current directory.
 @end format
 @end deffn
 
